schema/testdata/errors/permission_attribute_expression_invalid_operands.keel
model Person {
    fields {
        identity Identity
        organisation Organisation
    }

    @permission(
        //expect-error:21:28:AttributeExpressionError:unknown identifier 'invalid'
        expression: invalid,
        actions: [get]
    )

    @permission(
        //expect-error:21:23:AttributeExpressionError:unknown identifier 'ct'
        expression: ct.isAuthenticated,
        actions: [get]
    )

    @permission(
        //expect-error:24:25:AttributeExpressionError:field 'invalid' does not exist
        expression: ctx.invalid,
        actions: [get]
    )

    @permission(
        //expect-error:21:27:AttributeExpressionError:expression expected to resolve to type Boolean but it is Text
        expression: "true",
        actions: [get]
    )

    @permission(
        //expect-error:29:30:AttributeExpressionError:unknown identifier 'c'
        expression: true || c.isAuthenticated,
        actions: [get]
    )

    @permission(
        //expect-error:56:57:AttributeExpressionError:field 'invalid' does not exist
        expression: ctx.identity in person.organisation.invalid,
        actions: [get]
    )

    @permission(
        //expect-error:79:80:AttributeExpressionError:field 'invalid' does not exist
        expression: ctx.isAuthenticated && ctx.identity in person.organisation.invalid,
        actions: [get]
    )

    @permission(
        //expect-error:40:41:AttributeExpressionError:type Boolean does not have any fields to select
        //expect-error:87:88:AttributeExpressionError:field 'invalid' does not exist
        expression: ctx.isAuthenticated.invalid && ctx.identity in person.organisation.invalid,
        actions: [get]
    )
}

model Organisation {
    fields {
        people Person[]
    }
}
